modify signin and signup pages

--- a/src/frontend/src/styles/components/Variables.styl
+++ b/src/frontend/src/styles/components/Variables.styl
@@ -9,6 +9,7 @@ $button-color-secondary = #DFE438
 $blue3 = #416D80
 $blue2 = #05C4E6;
 $google = #FFF
+$grey1 = #dddddd
 
 $font-size = 13px
 $width-gallery = 280px
