--- a/src/frontend/src/styles/containers/Register.styl
+++ b/src/frontend/src/styles/containers/Register.styl
@@ -1,5 +1,5 @@
 .Register  
-    background $grey1
+    margin 50px 0 0 0
     display flex
     align-items center
     justify-content center
@@ -12,7 +12,7 @@
         border-left 0px
         border-top 0px
         border-right 0px
-        border 1px solid $blue3
+        border 1px solid $button-color
         border-radius 10px
         font-size 16px
         font-family $font-family
@@ -21,11 +21,11 @@
         height 45px
         width 90%
     button
-        background-color $blue2
+        background-color $button-color-secondary
         border-radius 10px
         border none
         cursor pointer
-        color white
+        color $text-color
         font-size 16px
         font-weight bold
         font-family 'Muli', sans-serif
@@ -41,7 +41,7 @@
         background-color rgba(255,255,255,0.2)
         border 2px solid white
         border-radius 40px
-        color $blue3
+        color $text-color
         padding 60px 68px 40px
         min-height 500px
         width 300px
@@ -62,7 +62,7 @@
   
     &__container--register a 
         font-size 16px
-        color $blue3
+        color $text-color
         font-weight bold
         text-decoration none
   
