--- a/src/frontend/src/styles/components/Products.styl
+++ b/src/frontend/src/styles/components/Products.styl
@@ -33,6 +33,7 @@
       object-fit contain
     button
       width 100%
+      margin 0 0 10px 0
       padding 10px
       border-radius 5px
       border 0px
