--- a/src/frontend/src/styles/components/Header.styl
+++ b/src/frontend/src/styles/components/Header.styl
@@ -230,4 +230,8 @@
                 font-size $font-size-search
                 padding 0 8px 0 8px 
         
-
+@media only screen and (min-width 1200px) 
+    .Header
+        margin 0 auto 0 auto   
+        width 1200px   
+        justify-content center  
