--- a/src/frontend/src/styles/containers/Home.styl
+++ b/src/frontend/src/styles/containers/Home.styl
@@ -9,4 +9,6 @@
 
 @media only screen and (min-width 1200px) 
     .Main
-        margin 160px 0 0 0        
+        margin 160px auto 0 auto   
+        width 1200px   
+        justify-content center
