fixed the product detail

--- a/src/frontend/src/styles/components/ProductDetailCard.styl
+++ b/src/frontend/src/styles/components/ProductDetailCard.styl
@@ -36,6 +36,7 @@
     font-size: x-large;
 
 .Card-detail__add-to-cart
+  margin: 20px 0 0 0;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -85,9 +86,11 @@
 }
 
 .Card-detail__price{
+    display:flex;
     width: 100%;
     font-size: xx-large;
     padding: 5px;
+    justify-content: center;
 }
 
 .Card-detail__description{
