--- a/src/frontend/styles/components/Layout.styl
+++ b/src/frontend/styles/components/Layout.styl
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap')
-
+@import '../Variables.styl'
 
 *
   text-decoration none
